# axum-folder-router

./: .emacs.desktop  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE.md  README.md  README.tpl  flake.nix  rust-toolchain.toml  rustfmt.toml
examples/advanced/: main.rs  server.rs
examples/advanced/api/files/: route.rs
examples/advanced/api/files/[...path]/: route.rs
examples/advanced/api/ping/: route.rs
examples/advanced/api/users/: route.rs
examples/advanced/api/users/[id]/: route.rs
examples/simple/: main.rs  routes.rs
examples/simple/api/: route.rs
src/: debug.rs  generate.rs  lib.rs  parse.rs
tests/: expand.rs  tests.rs
tests/expand/: advanced.expanded.rs  advanced.rs  simple.expanded.rs  simple.rs
tests/failures/: no_files.rs  no_files.stderr  no_routes.rs  no_routes.stderr
