[package]
name = "axum-folder-router"
version = "0.3.1"
edition = "2024"
readme = "./README.md"
authors = ["Tristan Druyen <ek36g2vcc@mozmail.com>"]
categories = ["web-programming"]
keywords = ["axum", "controller", "macro", "routing"]
description = "Helper macro for simple folder based routing of axum handlers"
homepage = "https://git.vlt81.de/vault81/axum-folder-router"
repository = "https://git.vlt81.de/vault81/axum-folder-router"
license = "MIT"

[lib]
path  = "./src/lib.rs"
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
glob = "0.3"

[dev-dependencies]
anyhow = "1.0.98"
axum = "0.8.3"
tokio = { version = "1.44.2", features = ["full"] }
